python-app/template/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
spec:
  selector:
    app: python-app
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 5000
