python-app/template/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app
  labels:
    app.kubernetes.io/name: python-app
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: python-app-service
            port: 
              number: 8080
